feature: adding last task crud methods
